--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "ember-deploy",
     "onehilltech"
   ],
-  "repository": "",
+  "repository": "onehilltech/ember-cli-deploy",
   "license": "Apache-2.0",
-  "author": "",
+  "author": "One Hill Technologies, LLC",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -62,6 +62,7 @@
     "edition": "octane"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "defaultBlueprint": "ember-cli-deploy-onehilltech"
   }
 }
